--- a/job-portal-client/package.json
+++ b/job-portal-client/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.0.12"
