--- a/job-portal-client/package.json
+++ b/job-portal-client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
